Update heading text in index.html web

--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<h2>Teste Repositório 2 arquivos enviando para o github</h2>
+<h2>Teste Repositório 2 arquivos enviando para o github 2 programador</h2>
