--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <h2>
-    Segunda branch Teste Repositório 2 arquivos enviando para o github 2
+    Terceira branch Teste Repositório 2 arquivos enviando para o github 2
     programador
 </h2>
